# ingress2gateway-aws-mcp

./: Dockerfile  README.md  pyproject.toml
docs/: annotation-reference.md  architecture.md  deployment.md
examples/input/: basic-ingress.yaml  complex-ingress.yaml  cross-ns-ingress.yaml  grpc-ingress.yaml  https-backend-ingress.yaml  ssl-passthrough-ingress.yaml  tcp-services-configmap.yaml  udp-services-configmap.yaml
examples/output/: basic-output.yaml  cross-ns-output.yaml  grpc-output.yaml  https-backend-output.yaml  ssl-passthrough-output.yaml  tcp-output.yaml  udp-output.yaml
infra/: cluster.yaml  lbc-values.yaml  test-backends.yaml
src/: converter.py  preflight.py  reporter.py  server.py  validator.py
src/aws/: annotation_map.py  crd.py  gateway.py
tests/: test_aws.py  test_engine_validator.py  test_regressions.py
